--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
         "build": "tsc",
         "start": "node dist/index.js"
     },
-    "keywords": ["microservicio", "catalogos", "clientes", "domicilios", "productos"],
+    "keywords": [
+        "microservicio",
+        "catalogos",
+        "clientes",
+        "domicilios",
+        "productos"
+    ],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-cloudwatch": "^3.936.0",
         "@aws-sdk/client-dynamodb": "^3.908.0",
         "@aws-sdk/credential-provider-ini": "^3.908.0",
         "@aws-sdk/lib-dynamodb": "^3.908.0",
